--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -68,3 +68,8 @@ html {
 .btn-custom {
   padding: 0.25rem 0.5rem;
 }
+
+.payment-section {
+  background: linear-gradient(#005f8b, #b94a08 75%, #000000 100%);
+  padding: 100px 0;
+}
